@@ -28,5 +28,5 @@ import games.strategy.util.Version;
  */
 public class EngineVersion
 {
-  public static final Version VERSION = new Version(0,6,0,1);
+  public static final Version VERSION = new Version(0,7,0,0);
 }
